# polars_ta

./: .readthedocs.yaml  LICENSE  README.md  compare.md  mkdocs.yml  nan_to_null.md  point_in_time.md  prompt.txt  pyproject.toml  requirements-docs.txt  requirements.txt  thinking_about_TA.md
deprecated/: demo_ta1.py  helper.py
docs/: index.md  wq.md
docs/ta/: index.md  momentum.md  operators.md  overlap.md  price.md  statistic.md  transform.md  volatility.md  volume.md
docs/talib/: index.md
docs/tdx/: arithmetic.md  choice.md  energy.md  logical.md  moving_average.md  over_bought_over_sold.md  pattern.md  pattern_feature.md  pressure_support.md  reference.md  statistic.md  times.md  trend.md  trend_feature.md  volume.md
docs/wq/: arithmetic.md  cross_sectional.md  half_life.md  logical.md  preprocess.md  time_series.md  transformational.md  vector.md
examples/: alpha101.py  demo_ta.py  demo_ta1.py  demo_ta2.py  demo_ta3.py
polars_ta/: __init__.py  alpha.py  cn.py  helper.py  momentum.py  noise.py  overlap.py  price.py  statistic.py  volatility.py
polars_ta/candles/: __init__.py  cdl1.py  cdl1_limit.py  cdl2.py
polars_ta/imports/: expr.py  tdx.py
polars_ta/labels/: __init__.py  _nb.py  future.py
polars_ta/performance/: _nb.py  drawdown.py  returns.py
polars_ta/prefix/: cdl.py  labels.py  reports.py  ta.py  talib.py  tdx.py  vec.py  wq.py
polars_ta/reports/: __init__.py  cicc.py
polars_ta/ta/: README.md  __init__.py  momentum.py  operators.py  overlap.py  price.py  statistic.py  transform.py  volatility.py  volume.py
polars_ta/talib/: README.md  __init__.py  momentum.py  overlap.py  volatility.py
polars_ta/tdx/: README.md  __init__.py  _chip.py  _nb.py  _slow.py  arithmetic.py  choice.py  energy.py  logical.py  moving_average.py  over_bought_over_sold.py  pattern.py  pattern_feature.py  pressure_support.py  reference.py  statistic.py  times.py  trend.py  trend_feature.py  volume.py
polars_ta/utils/: factor.py  functions.py  helper.py  numba_.py  pandas_.py  pit.py  with.py  withs.py  wrapper.py
polars_ta/wq/: __init__.py  _nb.py  _slow.py  arithmetic.py  cross_sectional.py  half_life.py  logical.py  preprocess.py  time_series.py  transformational.py  vector.py
tests/: cum_returns_test.py  numba_test.py  pit_test.py  test_helper.py  test_momentum.py  test_operators.py  test_overlap.py  test_statistic.py  test_volatility.py
tests/ta/: test_momentum.py  test_overlap.py  (+4 more)
tools/: README.md  codegen_talib.py  codegen_talib1.py  codegen_talib2.py  prefix.py  prefix_ta.py  prefix_talib.py  prefix_tdx.py  prefix_vec.py  prompt.py
(+5 files in other folders)
