[project]
name = "polars_ta"
authors = [
    { name = "wukan", email = "wu-kan@163.com" },
]
description = "polars expressions"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["polars", "expression", "talib"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "polars>=1.28.0",
    "polars-ols>=0.3.0",
    "numpy",
    "numba",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
talib = [
    "TA-Lib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "polars_ta/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["polars_ta"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["polars_ta*"]
